syntax = "proto3";
package layer.bridge;
import "cosmos/msg/v1/msg.proto";

option go_package = "github.com/tellor-io/layer/x/bridge/types";

// Msg defines the Msg service.
service Msg {
    rpc RequestAttestations (MsgRequestAttestations) returns (MsgRequestAttestationsResponse);
}

message MsgRequestAttestations {
    option (cosmos.msg.v1.signer) = "creator";

    string creator = 1;
    string queryId = 2;
    string timestamp = 3;
}

message MsgRequestAttestationsResponse {}
